tests/baselines/reference/noAssertForUnparseableTypedefs.errors.txt
tests/cases/conformance/jsdoc/bug26693.js(2,22): error TS5084: Cannot find module 'nope'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/conformance/jsdoc/bug26693.js (1 errors) ====
    /** @typedef {module:locale} hi */
    import { nope } from 'nope';
                         ~~~~~~
!!! error TS5084: Cannot find module 'nope'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    